# google-workspace-file-exporter-v1

./: .gitignore  README.md  config.default.json  main.py  pyproject.toml
tests/: test_main.py
