[project]
name = "google-workspace-file-exporter-v1"
version = "0.1.0"
description = "Download files from Google Drive Workspace URLs with change detection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.0",
]
